# polyrule

./: .eslintignore  .gitignore  package-lock.json  package.json
docs/: _config.yml  developer-guide.md  index.md  installation.md  user-guide.md
src/: App.js  App.tsx
src/components/: ChatInterface.tsx  Navbar.js  Navbar.tsx
src/components/pages/: Home.js  Home.tsx  Policies.js  Policies.tsx  Rules.js  Rules.tsx
src/hooks/: usePolicySets.ts  usePolicyUIState.ts  useRuleSets.ts  useRuleUIState.ts
src/wasm/: Cargo.toml
src/wasm/pkg/: chat.d.ts  chat.js  chat.wasm.d.ts  chat.wasm_bg.js  chat_bg.js  chat_bg.wasm.d.ts  package.json
src/wasm/src/: lib.rs
