[package]
name = "chat"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web-sys = { version = "0.3", features = ["Request", "Response", "Window", "Headers", "RequestInit", "RequestMode", "RequestCredentials"] }
js-sys = "0.3"
